Restructure kayak file layout. The number of kayak files has been growing and the directory is now pretty cluttered. Move everything to appropriate sub-directories and clean up the Makefile.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
 kayak_root/
-takeover-console
-ipcalc
-dialog
-passutil
-mount_media
-zpool_patch
-kbd.list
+bin/*
+etc/kbd.list
 run
 mkiso
 pv-grub*
